load("//shared/bazel/rules:cc_flags.bzl", "get_wpigui_linker_flags")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary", "wpilib_cc_library", "wpilib_cc_test")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/gen:gen-version-file.bzl", "generate_version_file")

generate_resources(
    name = "generate-resources",
    namespace = "sysid",
    prefix = "SYSID",
    resource_files = glob(["resources/*"]),
)

wpilib_cc_library(
    name = "sysid-lib",
    srcs = glob(
        ["src/main/native/cpp/**/*.cpp"],
        exclude = ["src/main/native/cpp/Main.cpp"],
    ) + [
        ":generate-resources",
        "//sysid/src/main/generate:generate-version",
    ],
    hdrs = glob(["src/main/native/include/**"]),
    linkopts = get_wpigui_linker_flags(console = True),
    strip_include_prefix = "src/main/native/include",
    visibility = ["//sysid:__subpackages__"],
    deps = [
        "//glass/src/libnt/native:libglassnt",
    ],
)

wpilib_cc_binary(
    name = "sysid",
    srcs = ["src/main/native/cpp/Main.cpp"],
    linkopts = get_wpigui_linker_flags(console = False),
    deps = ["sysid-lib"],
)

wpilib_cc_test(
    name = "sysid-test",
    size = "medium",
    srcs = glob(["src/test/native/cpp/**"]),
    tags = [
        "no-asan",
    ],
    deps = [
        ":sysid-lib",
        "//thirdparty/googletest",
    ],
)

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "WPILibVersion.cpp.in",
    visibility = ["//sysid:__subpackages__"],
)
