load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/gen:gen-version-file.bzl", "generate_version_file")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_binary_tool")

generate_version_file(
    name = "generate-version",
    output_file = "WPILibVersion.cpp",
    template = "src/main/generate/WPILibVersion.cpp.in",
)

generate_resources(
    name = "generate-resources",
    namespace = "sysid",
    prefix = "SYSID",
    resource_files = glob(["src/main/native/resources/*"]),
)

cc_library(
    name = "sysid-lib",
    srcs = glob(
        ["src/main/native/cpp/**/*.cpp"],
        exclude = ["src/main/native/cpp/Main.cpp"],
    ) + [
        ":generate-resources",
        ":generate-version",
    ],
    hdrs = glob(["src/main/native/include/**"]),
    strip_include_prefix = "src/main/native/include",
    deps = [
        "//datalog:_datalog",
        "//glass:libglass",
        "//wpinet:_wpinet",
    ],
)

wpilib_cc_binary_tool(
    name = "sysid",
    srcs = ["src/main/native/cpp/Main.cpp"],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["-SUBSYSTEM:WINDOWS"],
        "//conditions:default": [],
    }),
    deps = ["sysid-lib"],
    maven_group_id = "edu.wpi.first.tools",
    maven_artifact_name = "SysId",
)

cc_test(
    name = "sysid-test",
    size = "medium",
    srcs = glob(["src/test/native/cpp/**"]),
    tags = [
        "no-asan",
    ],
    deps = [
        ":sysid-lib",
        "//thirdparty/googletest",
    ],
)
