load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library", "wpilib_cc_static_library")
load("//shared/bazel/rules:objectivec_rules.bzl", "wpilib_objc_library")
load("//shared/bazel/rules:publishing.bzl", "architectures_pkg_zip", "platform_prefix", "wpilib_maven_export")

WIN_SRCS = glob(["src/main/native/directx11/**/*.cpp"])

LINUX_SRCS = glob(["src/main/native/opengl3/**/*.cpp"])

MAC_SRCS = glob(["src/main/native/metal/**/*.mm"])

cc_library(
    name = "headers",
    hdrs = glob(["src/main/native/include/**/*"]),
    strip_include_prefix = "src/main/native/include",
)

wpilib_objc_library(
    name = "wpigui-mac",
    srcs = MAC_SRCS,
    sdk_frameworks = [
        "Metal",
        "MetalKit",
        "Cocoa",
        "IOKit",
        "CoreFoundation",
        "CoreVideo",
        "QuartzCore",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":headers",
        "//thirdparty/imgui_suite",
    ],
)

pkg_files(
    name = "native-pkg",
    srcs = glob([
        "src/main/native/directx11/**",
        "src/main/native/opengl3/**",
        "src/main/native/metal/**",
    ]),
)

wpilib_cc_library(
    name = "wpigui",
    srcs = glob(["src/main/native/cpp/**/*.cpp"]) +
           select({
               "@bazel_tools//src/conditions:darwin": [],
               "@bazel_tools//src/conditions:windows": WIN_SRCS,
               "@rules_bzlmodrio_toolchains//constraints/combined:is_linux": LINUX_SRCS,
           }),
    extra_src_pkg_files = [":native-pkg"],
    include_license_files = True,
    strip_include_prefix = "include",
    tags = [
        "wpi-cpp-gui",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":headers",
        "//thirdparty/imgui_suite",
    ] + select({
        "@bazel_tools//src/conditions:darwin": [":wpigui-mac"],
        "//conditions:default": [],
    }),
)

wpilib_cc_static_library(
    name = "static/wpigui",
    static_deps = [
        "//thirdparty/imgui_suite:static/imguiSuite",
    ],
    static_lib_name = select({
        "@bazel_tools//src/conditions:windows": "static/wpigui.lib",
        "//conditions:default": "static/libwpigui.a",
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":wpigui",
    ],
)


pkg_files(
    name = "wpigui-static-files",
    srcs = [
        "static/wpigui",
    ],
    prefix = platform_prefix("static"),
    strip_prefix = "static",
)

architectures_pkg_zip(
    name = "wpigui_static_zip",
    srcs = [
        ":wpigui-static-files",
        "//:license_pkg_files",
    ],
)

wpilib_maven_export(
    name = "wpigui-cpp_publish",
    classifier_artifacts = {
        "headers": "wpigui-hdrs-zip",
        "sources": "wpigui-srcs-zip",
    },
    linux_artifacts = {
        # "linuxx86-64": ":wpiutil_shared_zip-opt-linux-x86-64",
        # "linuxx86-64debug": ":wpiutil_shared_zip-dbg-linux-x86-64",
        "linuxx86-64static": ":wpigui_static_zip-opt-linux-x86-64",
        "linuxx86-64staticdebug": ":wpigui_static_zip-dbg-linux-x86-64",
    },
    maven_coordinates = "edu.wpi.first.wpigui:wpigui-cpp:$(WPILIB_VERSION)",
    visibility = ["//visibility:public"],
    osx_artifacts = {
        # "osxuniversal": ":wpigui_shared_zip-opt-osxuniversal",
        # "osxuniversaldebug": ":wpigui_shared_zip-dbg-osxuniversal",
        "osxuniversalstatic": ":wpigui_static_zip-opt-osxuniversal",
        "osxuniversalstaticdebug": ":wpigui_static_zip-dbg-osxuniversal",
    },
    windows_artifacts = {
        # "windowsarm64": ":wpigui_shared_zip-opt-windows-arm64",
        # "windowsarm64debug": ":wpigui_shared_zip-dbg-windows-arm64",
        "windowsarm64static": ":wpigui_static_zip-opt-windows-arm64",
        "windowsarm64staticdebug": ":wpigui_static_zip-dbg-windows-arm64",
        # "windowsx86-64": ":wpigui_shared_zip-opt-windows-x86-64",
        # "windowsx86-64debug": ":wpigui_shared_zip-dbg-windows-x86-64",
        "windowsx86-64static": ":wpigui_static_zip-opt-windows-x86-64",
        "windowsx86-64staticdebug": ":wpigui_static_zip-dbg-windows-x86-64",
    },
)

